[gd_scene load_steps=5 format=3 uid="uid://cljo38s36dm54"]

[ext_resource type="Script" uid="uid://rtavr1qgdwd0" path="res://scripts/ball_path.gd" id="1_adnxe"]
[ext_resource type="PackedScene" uid="uid://g7tlfbm48buo" path="res://scenes/ball_spawner.tscn" id="1_qps0i"]

[sub_resource type="Curve2D" id="Curve2D_hdgg0"]
_data = {
"points": PackedVector2Array(-100, 0, 0, 0, 910, 60, 139.31, -73.205, -139.31, 73.205, 901, 441, 114.42, 86.3819, -114.42, -86.3819, 129, 454, 0, 0, 0, 0, 66, 74)
}
point_count = 4

[sub_resource type="CircleShape2D" id="CircleShape2D_hdgg0"]
radius = 11.0

[node name="BallPath" type="Node2D"]
script = ExtResource("1_adnxe")
spacing_between_spawn = 25.0

[node name="Path" type="Path2D" parent="."]
curve = SubResource("Curve2D_hdgg0")

[node name="BallSpawner" parent="." instance=ExtResource("1_qps0i")]
ball_owner = 1

[node name="BeginingChecker" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BeginingChecker"]
shape = SubResource("CircleShape2D_hdgg0")
